# offshore-krw-clearing

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
doc/: API_Reference.md  BOK_Interface_Spec.md  OffshoreKRW_Flow.md  README.md  SWIFT_MT_Guide.md
src/audit/: logger.py
src/bok_simulator/: app.py  handlers.py  scenarios.py
src/builder/: mt103_builder.py  mt202_builder.py  mt9xx_builder.py
src/cutoff/: manager.py
src/dashboard/: app.py
src/flow/: exchange_processor.py  payment_flow.py  status_machine.py
src/parser/: __init__.py  bic_validator.py  block_parser.py  field_validator.py  tag_parser.py
src/validator/: swift_validator.py
study/: 1.SWIFT BIC 체계 이해.md  2.MT vs MX(ISO20022) 차이.md  3.Block 1~5 구조.md  4.MT103  MT202 MT950 필드.md
tests/integration/: test_audit_logger.py  test_exchange_processor.py  test_payment_flow.py  test_status_machine.py
tests/scenarios/: test_cutoff_exceeded.py  test_duplicate_ref.py  test_normal_offshore_krw_payment.py
tests/unit/: test_cutoff_manager.py  test_handlers.py  test_scenarios.py
tests/unit/builder/: test_mt103_builder.py  test_mt202_builder.py  test_mt9xx_builder.py  test_swift_validator.py  test_validator_all_types.py
tests/unit/parser/: test_bic_validator.py  test_block_parser.py  test_field_validator.py  test_tag_parser.py
