[project]
name = "owp-simulator"
version = "1.0.0"
description = "SWIFT MT Message Simulator for Offshore KRW Payment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "streamlit>=1.28",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
include = ["src*"]
